[package]
name = "ydcv-saki"
description = "YouDao Console Version"
repository = "https://github.com/eatradish/ydcv-saki"
readme = "README.md"
license = "GPL-2.0"
version = "0.7.1"
authors = ["Jiachen Yang <farseerfc@gmail.com>", "eatradish <sakiiily@aosc.io>"]
edition = "2024"

[[bin]]
name = "ydcv"
path = "./src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
env_logger = "^0.11"
rustyline = { version = "15", features = ["with-file-history"] }
log = "^0.4"
htmlescape = "0.3"
nyquest = { version = "0.1", features = ["blocking"], git = "https://github.com/bdbai/nyquest", rev = "b4007ff77a77bf4f922d4ebfa5347b18a00cba77" }
nyquest-preset = { version = "0.1", features = ["blocking"], package = "nyquest-preset", git = "https://github.com/bdbai/nyquest", rev = "b4007ff77a77bf4f922d4ebfa5347b18a00cba77" }
url = "2.5"
scraper = "0.23"
arboard = { version = "3.5.0", optional = true, default-features = false, features = ["wayland-data-control"] }
anyhow = "1"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
winrt-notification = { version = "^0.5", optional = true }

[target.'cfg(unix)'.dependencies]
notify-rust = { version = "^4.3", optional = true }

[features]
default = ["notify", "clipboard"]
notify = ["notify-rust", "winrt-notification"]
clipboard = ["arboard"]

[profile.release-lto]
inherits = "release"
lto = true
