[package]
name = "ydcv-saki"
description = "YouDao Console Version"
repository = "https://github.com/eatradish/ydcv-saki"
readme = "README.md"
license = "GPL-2.0"
version = "0.7.1"
authors = ["Jiachen Yang <farseerfc@gmail.com>", "eatradish <sakiiily@aosc.io>"]
edition = "2024"

[[bin]]
name = "ydcv"
path = "./src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "^0.11"
rustyline = { version = "17", features = ["with-file-history"] }
log = "0.4"
htmlescape = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
scraper = "0.24"
arboard = { version = "3.5.0", optional = true, default-features = false, features = ["wayland-data-control"] }
anyhow = "1"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
winrt-notification = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
notify-rust = { version = "4.3", optional = true }
zbus = { version = "5", default-features = false, features = ["tokio"], optional = true }

[features]
default = ["notify", "clipboard", "rustls"]
native-tls = ["reqwest/native-tls"]
notify = ["notify-rust", "winrt-notification", "zbus"]
clipboard = ["arboard"]
rustls = ["reqwest/rustls-tls"]

[profile.release-lto]
inherits = "release"
lto = true
